fixed spacing on top five

--- a/Kobe.dev/src/css/ComponentsCss/MeExp.css
+++ b/Kobe.dev/src/css/ComponentsCss/MeExp.css
@@ -5,8 +5,10 @@
 
 .leftBlock{
     width: 40%;
+
 }
 
 .rightBlock{
     width: 60%;
+    min-height: 40vh;
 }
