--- a/Kobe.dev/src/css/ComponentsCss/Top5Section.css
+++ b/Kobe.dev/src/css/ComponentsCss/Top5Section.css
@@ -63,14 +63,14 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
-  width: 100%;
+  padding-top: 3%;
   
 }
 
 .bubble {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
   
 }
